{
    "name": "PlayerInputSystem",
    "maps": [
        {
            "name": "PlayerInputs",
            "id": "8b445174-f6d1-4a54-ba59-537134e83e28",
            "actions": [
                {
                    "name": "MoveDir",
                    "type": "Value",
                    "id": "d1c316ee-1649-44d0-8c0e-22e6b090b2fd",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "ZoomDir",
                    "type": "Value",
                    "id": "0952894c-9043-4d54-8844-b3ab9bbba089",
                    "expectedControlType": "Axis",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "PauseMenu",
                    "type": "Value",
                    "id": "dab2d8fd-78cf-495d-9f39-2a48cc1da6fd",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "Press",
                    "initialStateCheck": true
                }
            ],
            "bindings": [
                {
                    "name": "Dir",
                    "id": "649b0d87-ba8d-49e0-8277-236baebdd1b2",
                    "path": "2DVector(mode=1)",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MoveDir",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "Up",
                    "id": "c406fe01-be87-4556-bb56-f4cefa1356a4",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MoveDir",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "Down",
                    "id": "d98f60e5-8e44-4ce0-9135-05f64583e23e",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MoveDir",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "Left",
                    "id": "a059a825-61f7-4625-8bdd-f244b3b70149",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MoveDir",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "Right",
                    "id": "9870d687-2321-455f-9b61-b2f0fa4fad2f",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MoveDir",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "efff73e4-8a03-44cf-b33d-5be13bd50415",
                    "path": "<Gamepad>/leftStick",
                    "interactions": "",
                    "processors": "StickDeadzone",
                    "groups": "",
                    "action": "MoveDir",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "2a374f0e-1a10-487c-a959-519887aa7e8a",
                    "path": "<Keyboard>/escape",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "PauseMenu",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "1c68acce-6f82-49de-8798-cc7681bbdfe9",
                    "path": "<Gamepad>/start",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "PauseMenu",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "Dir",
                    "id": "ddafc4d1-ff1e-4b7c-9f57-15ced1e0548a",
                    "path": "1DAxis(mode=1)",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ZoomDir",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "Negative",
                    "id": "010ef625-581a-4c52-ae50-a36091300c35",
                    "path": "<Keyboard>/q",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ZoomDir",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "Positive",
                    "id": "b4988f03-bf8b-4432-83a4-f6b5c631a8a7",
                    "path": "<Keyboard>/e",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ZoomDir",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "GamepadDir",
                    "id": "018a0c11-0b4d-4bcc-a077-38a072374663",
                    "path": "1DAxis",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ZoomDir",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "positive",
                    "id": "2714b0b5-f1d7-42d5-aab1-8f206bf49852",
                    "path": "<Gamepad>/leftTrigger",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ZoomDir",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "negative",
                    "id": "74a9411a-89c1-4512-9c37-46d622924d56",
                    "path": "<Gamepad>/rightTrigger",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ZoomDir",
                    "isComposite": false,
                    "isPartOfComposite": true
                }
            ]
        }
    ],
    "controlSchemes": []
}